# Online_store_django

./: README.md  env_template  manage.py  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/management/commands/: setup_group.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_views.py  0003_blogpost_notified.py  0004_alter_blogpost_content_alter_blogpost_notified_and_more.py
blog/templates/: blog_detail.html  blog_list.html
catalog/: admin.py  constants.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_fixture.json
catalog/management/commands/: add_products.py  setup_groups.py
catalog/migrations/: 0001_initial.py  0002_contacts.py  0004_product_on_sale_alter_product_category_and_more.py  0005_alter_product_options_product_publication_status.py  0006_alter_product_options.py  0007_product_owner.py
catalog/templates/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_detail.html  products_list.html
catalog/templates/includes/: footer.html  header.html
online_store_django/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html  profile_edit.html  register.html
